# AnimeDownloader-CLI

./: README.md  pyproject.toml  requirements.txt  setup.py
animepahe/: __init__.py  downloader.py
