[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animepahe-dl"
version = "1.0.0"
description = "CLI-based AnimePahe downloader using Brave, Selenium, and yt-dlp"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "iamtakura"}
]
requires-python = ">=3.9"
keywords = ["anime", "downloader", "animepahe", "cli", "selenium", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests",
    "selenium",
    "beautifulsoup4",
    "yt-dlp",
    "webdriver-manager",
]

[project.urls]
Homepage = "https://github.com/iamtakura/AnimeDownloader-CLI"
Repository = "https://github.com/iamtakura/AnimeDownloader-CLI"
Issues = "https://github.com/iamtakura/AnimeDownloader-CLI/issues"

[project.scripts]
animepahe = "animepahe.downloader:main"
anime-dl = "animepahe.downloader:main"
apdl = "animepahe.downloader:main"

[tool.setuptools.packages.find]
where = ["."]